<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/newPwdDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_pwd_dialog"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    <EditText
        android:id="@+id/newPwdText"
        android:inputType="textPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:fontFamily="sans-serif"
        android:hint="@string/prompt_pwd"
        android:imeOptions="actionDone"/>
    <EditText
        android:id="@+id/newPwdText2"
        android:inputType="textPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:fontFamily="sans-serif"
        android:hint="@string/prompt_pwd2"
        android:imeOptions="actionDone"/>
</LinearLayout>